--- a/memo.css
+++ b/memo.css
@@ -54,7 +54,23 @@ body {
 
 }
 
-
+input[type=text]
+{
+  color: black;
+  background-color: #f1f1f1;
+  width: 80%;
+  font-family: 'Courier New', Courier, monospace;
+  
+  box-sizing: border-box;
+  box-shadow: #013369;
+  border-radius: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 2px;
+  border-color: #013369;
+  
+  
+}
 
 
 .parent {
@@ -161,6 +177,12 @@ body {
 
 }
 
+.textright {
+  text-align: right;
+
+
+}
+
 .Standings {
 
   font-family: sans-serif;
@@ -255,7 +277,7 @@ body {
 #rcorners1 {
   border-radius: 5px;
   background: white;
-  padding: 10px;
+  padding: 15px;
 
   width: 95%;
   height: 95%;
@@ -285,8 +307,8 @@ td:first-child, th:first-child {
   float: right;
   display: inline;
   position: fixed;
-  top: 0;
-  right: 0;
+  top: 4px;
+  right: 7px;
 
   color: #ffffff;
   background-color: #013369;
