--- a/memo.css
+++ b/memo.css
@@ -25,6 +25,9 @@
 
 body {
   margin: 0;
+
+
+
  
 }
 
@@ -111,6 +114,22 @@ input[type=text]
   background:  var(--black);
   overflow: hidden;
   align-items: center;
+ 
+}
+
+
+
+.path2 {
+
+  display: flex;
+  width: 100%;
+  height: 100vh;
+
+  background-image: url("images/staticbackground/field0.jpeg");
+
+  background-size: 100% auto;
+
+
 }
 
 .scores {
