--- a/static/memo.css
+++ b/static/memo.css
@@ -33,7 +33,7 @@ body {
 
 @font-face {
   font-family: NFL-Font;
-  src: url('static/fonts/NFL-Font/Freshman.ttf');
+  src: url('fonts/NFL-Font/Freshman.ttf');
 }
 
 .responsive 
@@ -138,7 +138,7 @@ input[type=text]
   width: 100%;
   height: 100vh;
 
-  background-image: url("images/staticbackground/field0.jpeg");
+  background-image: url("/images/staticbackground/field0.jpeg");
 
   background-size: 100% auto;
   overflow: hidden;
