--- a/static/memo.css
+++ b/static/memo.css
@@ -138,7 +138,7 @@ input[type=text]
   width: 100%;
   height: 100vh;
 
-  background-image: url("/images/staticbackground/field0.jpeg");
+  background-image: url("../images/staticbackground/field0.jpeg");
 
   background-size: 100% auto;
   overflow: hidden;
